Add launch config for tauri

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,17 @@
             "runtimeArgs": [
                 "dev"
             ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch via Tauri",
+            "runtimeExecutable": "yarn",
+            "cwd": "${workspaceFolder}",
+            "runtimeArgs": [
+                "tauri",
+                "dev"
+            ]
         }
     ]
 }
