--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@carbon/react": "^1.63.1",
+    "@journeyapps/wa-sqlite": "^0.3.0",
+    "@powersync/react": "^1.4.0",
+    "@powersync/web": "^1.6.0",
     "@tauri-apps/api": "^1.6.0",
     "next": "14.2.5",
     "react": "^18",
