--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^4.5.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
