--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@carbon/react": "^1.63.1",
     "@journeyapps/wa-sqlite": "^0.3.0",
     "@powersync/common": "^1.16.2",
+    "@powersync/kysely-driver": "^0.3.0",
     "@powersync/react": "^1.4.0",
     "@powersync/web": "^1.6.0",
     "@tauri-apps/api": "^1.6.0",
@@ -21,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.5.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.6.0",
