--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^11.48.0",
+    "@carbon/pictograms-react": "^11.65.0",
     "@carbon/react": "^1.63.1",
     "@journeyapps/wa-sqlite": "^0.3.0",
     "@powersync/common": "^1.16.2",
