--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:generate": "drizzle-kit generate --schema=./lib/pglite/schema.ts --out=./lib/pglite/migrations --dialect=postgresql",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,12 +14,14 @@
     "@carbon/icons-react": "^11.48.0",
     "@carbon/pictograms-react": "^11.65.0",
     "@carbon/react": "^1.65.0",
+    "@electric-sql/pglite": "^0.2.7",
     "@journeyapps/wa-sqlite": "^0.3.0",
     "@powersync/common": "^1.16.2",
     "@powersync/kysely-driver": "^0.3.0",
     "@powersync/react": "^1.4.0",
     "@powersync/web": "^1.6.0",
     "@tauri-apps/api": "^1.6.0",
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
