Add support for embedded sqlite using tauri api

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "db:generate": "drizzle-kit generate --schema=./lib/pglite/schema.ts --out=./lib/pglite/migrations --dialect=postgresql && node ./lib/pglite/migration_compiler.mjs",
+    "db:generate": "drizzle-kit generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +14,8 @@
     "@carbon/icons-react": "^11.48.0",
     "@carbon/pictograms-react": "^11.65.0",
     "@carbon/react": "^1.65.0",
+    "@drizzle/react-plugin": "^1.5.3",
+    "@drizzle/store": "^1.5.3",
     "@electric-sql/pglite": "^0.2.7",
     "@electric-sql/pglite-repl": "^0.2.7",
     "@journeyapps/wa-sqlite": "^0.3.0",
@@ -21,17 +23,20 @@
     "@powersync/kysely-driver": "^0.3.0",
     "@powersync/react": "^1.4.0",
     "@powersync/web": "^1.6.0",
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": ">=2.0.0-rc.0",
+    "@tauri-apps/plugin-fs": ">=2.0.0-rc.0",
+    "@tauri-apps/plugin-sql": "^2.0.0-rc.1",
     "drizzle-orm": "^0.33.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.5.1",
+    "redux": "^5.0.1",
     "sass": "^1.77.8",
     "uid": "^2.0.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.6.0",
+    "@tauri-apps/cli": ">=2.0.0-rc.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
