--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,9 +17,9 @@ tauri-build = { version = "2.0.0-rc.12", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc.16", features = [] }
-tauri-plugin-sql = { version = "2.0.0-rc.2", features = ["sqlite"] }
-tauri-plugin-fs = "2.0.0-rc.5"
+tauri = { version = "2.0.2", features = [] }
+tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
+tauri-plugin-fs = "2.0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
