--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,26 @@
 {
-  "name": "Ubuntu",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
-  "forwardPorts": [
-    3000, // Node.js
-    6080, // webVNC
-    5901 // remoteVNC
-  ],
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "tauri-apps.tauri-vscode",
-        "dsznajder.es7-react-js-snippets",
-        "editorconfig.editorconfig"
-      ]
+    "name": "Ubuntu",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
+    "forwardPorts": [
+        3000, // Node.js
+        6080, // webVNC
+        5901 // remoteVNC
+    ],
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "editorconfig.editorconfig",
+                "dsznajder.es7-react-js-snippets",
+                "tauri-apps.tauri-vscode",
+                "rust-lang.rust-analyzer"
+            ]
+        }
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/node:1.6.0": {},
+        "ghcr.io/devcontainers/features/rust:1.3.1": {},
+        "ghcr.io/devcontainers/features/desktop-lite:1": {}
     }
-  },
-  "features": {
-    "ghcr.io/devcontainers/features/node:1.6.0": {},
-    "ghcr.io/devcontainers/features/rust:1.3.1": {},
-    "ghcr.io/devcontainers/features/desktop-lite:1": {}
-  }
 }
