--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,12 +15,13 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
+mockall = "0.13.0"
+modql = "0.4.1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.2", features = [] }
 tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
 tauri-plugin-fs = "2.0.1"
-mockall = "0.13.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
