--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
+derive_more = { version = "1.0.0", features = ["display", "from"] }
 mockall = "0.13.0"
 modql = "0.4.1"
 serde_json = "1.0"
