--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,16 +15,18 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
-async-std = { version = "1.12.0", features = ["attributes"] }
 derive_more = { version = "1.0.0", features = ["display", "from"] }
-modql = { version = "0.4.1", features = ["with-sea-query"] }
-sea-query = "0.32.1"
-serde_json = "1.0"
+diesel = { version = "2.2.6", features = [
+    "sqlite",
+    "extras",
+    "returning_clauses_for_sqlite_3_35",
+] }
 serde = { version = "1.0", features = ["derive"] }
-sqlx = { version = "0.8.2", features = ["runtime-async-std", "sqlite"] }
+serde_json = { version = "1.0" }
 tauri = { version = "2.0.2", features = [] }
 tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
 tauri-plugin-fs = "2.0.1"
+uuid = { version = "1.11.1", features = ["v7"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
