--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,10 +20,10 @@ diesel = { version = "2.2.6", features = [
     "sqlite",
     "returning_clauses_for_sqlite_3_35",
 ] }
+diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 tauri = { version = "2.0.2", features = [] }
-tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
 tauri-plugin-fs = "2.0.1"
 uuid = { version = "1.11.1", features = ["v7"] }
 
