--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,7 +12,7 @@ name = "lightning_pos"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc.12", features = [] }
+tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
 chrono = { version = "0.4.39", features = ["serde"] }
@@ -24,7 +24,7 @@ diesel = { version = "2.2.6", features = [
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-tauri = { version = "2.0.2", features = [] }
+tauri = { version = "2.2.2", features = [] }
 tauri-plugin-fs = "2.0.1"
 uuid = { version = "1.11.1", features = ["v7"] }
 
