--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,11 @@ diesel = { version = "2.2.6", features = [
     "uuid",
 ] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
-juniper = { version = "0.16.1", features = ["chrono", "uuid"] }
+juniper = { version = "0.16.1", features = [
+    "chrono",
+    "uuid",
+    "schema-language",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 tauri = { version = "2.2.2", features = [] }
