--- a/package.json
+++ b/package.json
@@ -3,49 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "db:generate": "drizzle-kit generate",
-        "db:studio": "drizzle-kit studio",
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
         "tauri": "tauri",
-        "test": "vitest",
         "schema:export": "cd src-tauri && cargo run export-schema"
     },
-    "dependencies": {
-        "@carbon/icons-react": "^11.48.0",
-        "@carbon/pictograms-react": "^11.65.0",
-        "@carbon/react": "^1.65.0",
-        "@tauri-apps/api": ">=2.0.0-rc.0",
-        "@tauri-apps/plugin-fs": ">=2.0.0-rc.0",
-        "@tauri-apps/plugin-sql": "^2.0.0-rc.1",
-        "drizzle-orm": "^0.33.0",
-        "next": "14.2.5",
-        "react": "^18",
-        "react-dom": "^18",
-        "react-hotkeys-hook": "^4.5.1",
-        "sass": "^1.77.8",
-        "uid": "^2.0.2"
-    },
     "devDependencies": {
-        "@libsql/client": "^0.14.0",
-        "@tauri-apps/cli": ">=2.0.0-rc.0",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/react": "^16.0.1",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "@vitejs/plugin-react": "^4.3.2",
-        "autoprefixer": "^10.4.20",
-        "drizzle-kit": "^0.24.2",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.5",
-        "jsdom": "^25.0.1",
-        "postcss": "^8.4.41",
-        "tailwindcss": "^3.4.10",
-        "typescript": "^5",
-        "vitest": "^2.1.2"
+        "@tauri-apps/cli": ">=2.0.0-rc.0"
     },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "packageManager": "yarn@1.22.22"
 }
