--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
 chrono = { version = "0.4.39", features = ["serde"] }
-derive_more = { version = "1.0.0", features = ["display", "from"] }
+derive_more = { version = "1.0.0", features = ["display", "from", "from_str"] }
 diesel = { version = "2.2.6", features = [
     "sqlite",
     "returning_clauses_for_sqlite_3_35",
