--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,3 +1,9 @@
+[workspace]
+members = [
+    ".",
+    "crates/lightning-macros"
+]
+
 [package]
 name = "lightning_pos"
 version = "0.1.0"
@@ -15,6 +21,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
+lightning-macros = { path = "crates/lightning-macros" }
 chrono = { version = "0.4.39", features = ["serde"] }
 derive_more = { version = "1.0.0", features = ["display", "from", "from_str"] }
 diesel = { version = "2.2.6", features = [
