--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,13 +19,14 @@ tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
 lightning-macros = { path = "crates/lightning-macros" }
+bigdecimal = { version = "0.4", features = ["serde"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 derive_more = { version = "1.0.0", features = ["display", "from", "from_str"] }
 diesel = { version = "2.2.6", features = [
     "sqlite",
-    "returning_clauses_for_sqlite_3_35",
-    "chrono",
-    "uuid",
+    "returning_clauses_for_sqlite_3_35", # Required for DDL returning clauses
+    "chrono",                            # Required for chrono ser/de
+    "numeric",                           # Required for bigdecimal
 ] }
 diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
 diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
