--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -12,15 +12,13 @@
     },
     "dependencies": {
         "@carbon/icons-react": "^11.48.0",
-        "@carbon/pictograms-react": "^11.65.0",
         "@carbon/react": "^1.65.0",
         "@tauri-apps/api": ">=2.0.0-rc.0",
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18",
         "react-hotkeys-hook": "^4.5.1",
-        "sass": "^1.77.8",
-        "uid": "^2.0.2"
+        "sass": "^1.77.8"
     },
     "devDependencies": {
         "@libsql/client": "^0.14.0",
