--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -8,12 +8,14 @@
         "start": "next start",
         "lint": "next lint",
         "tauri": "tauri",
-        "test": "vitest"
+        "test": "vitest",
+        "codegen": "graphql-codegen --config codegen.ts"
     },
     "dependencies": {
         "@carbon/icons-react": "^11.48.0",
         "@carbon/react": "^1.65.0",
         "@tauri-apps/api": ">=2.0.0-rc.0",
+        "graphql": "^16.10.0",
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18",
@@ -21,7 +23,8 @@
         "sass": "^1.77.8"
     },
     "devDependencies": {
-        "@libsql/client": "^0.14.0",
+        "@graphql-codegen/cli": "5.0.5",
+        "@graphql-codegen/client-preset": "4.6.2",
         "@tauri-apps/cli": ">=2.0.0-rc.0",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.0.1",
