Update launch script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch via Tauri",
-            "runtimeExecutable": "pnpm",
-            "cwd": "${workspaceFolder}/src-ui",
+            "runtimeExecutable": "yarn",
+            "cwd": "${workspaceFolder}",
             "runtimeArgs": [
                 "tauri",
                 "dev"
