--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -8,7 +8,6 @@
         "start": "next start",
         "lint": "next lint",
         "tauri": "tauri",
-        "test": "vitest",
         "codegen": "graphql-codegen --config codegen.ts"
     },
     "dependencies": {
@@ -38,7 +37,6 @@
         "jsdom": "^25.0.1",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
-        "typescript": "^5",
-        "vitest": "^2.1.2"
+        "typescript": "^5"
     }
 }
