Update nextjs and react dep

--- a/src-ui/tsconfig.json
+++ b/src-ui/tsconfig.json
@@ -17,9 +17,7 @@
         "jsx": "preserve",
         "incremental": true,
         "target": "ES2022",
-        "types": [
-            "vitest/globals"
-        ],
+        "types": [],
         "plugins": [
             {
                 "name": "next"
