--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -15,9 +15,9 @@
         "@carbon/react": "^1.76.0",
         "@tauri-apps/api": "^2.2.0",
         "graphql": "^16.10.0",
-        "next": "14.2.5",
-        "react": "^18",
-        "react-dom": "^18",
+        "next": "15.1.7",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-hotkeys-hook": "^4.6.1",
         "sass": "^1.85.0"
     },
@@ -26,14 +26,20 @@
         "@graphql-codegen/client-preset": "4.6.2",
         "@tauri-apps/cli": "^2.2.7",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "19.0.10",
+        "@types/react-dom": "19.0.4",
         "autoprefixer": "^10.4.20",
         "eslint": "^8",
-        "eslint-config-next": "14.2.5",
+        "eslint-config-next": "15.1.7",
         "jsdom": "^25.0.1",
         "postcss": "^8.5.2",
         "tailwindcss": "^3.4.10",
         "typescript": "^5"
+    },
+    "pnpm": {
+        "overrides": {
+            "@types/react": "19.0.10",
+            "@types/react-dom": "19.0.4"
+        }
     }
 }
