Add support for joining expense and category

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch via Tauri",
-            "runtimeExecutable": "yarn",
+            "runtimeExecutable": "pnpm",
             "cwd": "${workspaceFolder}",
             "runtimeArgs": [
                 "tauri",
