--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ serde_json = { version = "1.0" }
 tauri = { version = "2.2.2", features = [] }
 tauri-plugin-fs = "2.0.1"
 uuid = { version = "1.11.1", features = ["v7"] }
+rand = "0.8"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
