--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -35,7 +35,8 @@
         "eslint-config-next": "15.1.7",
         "jsdom": "^25.0.1",
         "postcss": "^8.5.2",
-        "tailwindcss": "^3.4.10",
+        "tailwindcss": "^4.1.3",
+        "@tailwindcss/postcss": "^4.1.3",
         "typescript": "^5"
     },
     "pnpm": {
