--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -1,4 +1,5 @@
 {
+    "type": "module",
     "name": "lightning_pos_ui",
     "version": "0.1.0",
     "private": true,
@@ -24,16 +25,22 @@
         "sass": "^1.86.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.24.0",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.8.0",
         "@graphql-typed-document-node/core": "^3.2.0",
+        "@next/eslint-plugin-next": "^15.3.0",
         "@tailwindcss/postcss": "^4.1.3",
         "@types/node": "^22.14.0",
         "@types/react": "19.1.0",
         "@types/react-dom": "19.1.2",
+        "@typescript-eslint/eslint-plugin": "^8.29.1",
+        "@typescript-eslint/parser": "^8.29.1",
         "autoprefixer": "^10.4.21",
-        "eslint": "^8",
+        "eslint": "^9.24.0",
         "eslint-config-next": "15.3.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "jsdom": "^26.0.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.3",
