--- a/src-ui/package.json
+++ b/src-ui/package.json
@@ -42,6 +42,7 @@
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "jsdom": "^26.0.0",
+        "lightningcss": "^1.29.3",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.3",
         "typescript": "^5.8.3"
