--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,7 @@ uuid = { version = "1.11.1", features = ["v7"] }
 rand = "0.8"
 libsql = { version = "0.9.3" }
 tokio = { version = "1.44.2" }
+sqlx = { version = "0.8.4", features = ["sqlite"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
