--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,7 @@ rand = "0.8"
 libsql = { version = "0.9.3" }
 tokio = { version = "1.44.2" }
 sqlx = { version = "0.8.4", features = ["sqlite"] }
+sea-query = { version = "0.32.3", features = ["with-uuid", "with-chrono"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
