--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,8 +42,8 @@ tauri-plugin-fs = "2.0.1"
 uuid = { version = "1.11.1", features = ["v7"] }
 rand = "0.8"
 libsql = { version = "0.9.3" }
-tokio = { version = "1.44.2" }
-sqlx = { version = "0.8.4", features = ["sqlite"] }
+tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
+sqlx = { version = "0.8.4", features = ["sqlite", "runtime-tokio"] }
 sea-query = { version = "0.32.3", features = ["with-uuid", "with-chrono"] }
 
 [features]
