--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,7 +44,11 @@ rand = "0.8"
 libsql = { version = "0.9.3" }
 tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
 sqlx = { version = "0.8.4", features = ["sqlite", "runtime-tokio"] }
-sea-query = { version = "0.32.3", features = ["with-uuid", "with-chrono"] }
+sea-query = { version = "0.32.3", features = [
+    "with-uuid",
+    "with-chrono",
+    "thread-safe",
+] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
