--- a/src-tauri/crates/lightning-macros/Cargo.toml
+++ b/src-tauri/crates/lightning-macros/Cargo.toml
@@ -10,4 +10,4 @@ proc-macro = true
 syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-diesel = { version = "2.2.6", features = ["sqlite"] }
+Inflector = "0.11.4"
