--- a/src-tauri/crates/lightning-macros/Cargo.toml
+++ b/src-tauri/crates/lightning-macros/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 Inflector = "0.11.4"
+convert_case = "0.6.0"
